Fixed layout shift with scroll

--- a/app/index.css
+++ b/app/index.css
@@ -73,6 +73,9 @@
 	body {
 		@apply m-0 overflow-x-hidden bg-background text-foreground;
 	}
+	html {
+		scrollbar-gutter: stable;
+	}
 	h1 {
 		@apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
 	}
@@ -97,7 +100,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-	@apply bg-background;
+	@apply bg-muted;
 }
 
 /* Handle */
